# dotfiles

./: .aliases  .bashrc  .biomeignore  .bumplus.toml  .bumpversion.cfg  .codeclimate.yml  .codespell-ignores  .commitlintrc.json  .custom_zsh_plugins.txt.sample  .customrc.example  .dependences  .dockerignore  .editorconfig  .env.example  .envrc  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .goji.json  .gvimrc  .lintstagedrc.js  .mailmap  .pre-commit-config.yaml  .prettierignore  .prettierrc  .projectile  .pylintrc  .tmux.conf  .tmuxinator.yml  .todocheck.yaml  .travis.yml  .vagrant  .vimrc.bundles.local  .vimrc.local  .zshrc.local  .zunit.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  (+49 more)
.chglog/: CHANGELOG.tpl.md  config.yml
.ci/linters/: .ansible-lint  .codespell-ignores  .commitlintrc.json  .eslintignore  .eslintrc.js  .gitleaks.toml  .golangci.yml  .goreleaser.yml  .hadolint.yaml  .lintstagedrc.js  .lychee.toml  .prettierignore  .pylintrc  .tflint.hcl  checkov.yml  markdown-link-config.json  prettier.config.cjs  prettier.config.js  yamllint.config.yaml
.claude/commands/opsx/: apply.md  archive.md  explore.md  propose.md
.claude/skills/agents-bootstrap-sync/: .goji.json.tpl  .openskills.json  AGENTS.md.tpl  README.md  SKILL.md  codi.toml.tpl  jasper.toml.tpl  readme.yaml
.claude/skills/cartography/: .openskills.json  README.md  SKILL.md  codemap.md  readme.yaml
.claude/skills/context-sync/: .openskills.json  SKILL.md  readme.yaml
.claude/skills/gcal-daily-planner/: .openskills.json  README.md  SKILL.md  event.md.tpl  readme.yaml
.claude/skills/git-release/: .openskills.json  SKILL.md  readme.yaml
.claude/skills/github-create-pr/: .openskills.json  README.md  SKILL.md  readme.yaml
.claude/skills/github-update-pr/: .openskills.json  README.md  SKILL.md  readme.yaml
.claude/skills/github-validate-pr/: .openskills.json  README.md  SKILL.md  readme.yaml
.claude/skills/gitlab-create-mr/: .openskills.json  README.md  SKILL.md  readme.yaml
.config/terminator/: config
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  renovate.json  semantic.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_issue.md  support_question.md
.github/linters/: .commitlintrc.json  .eslintrc.js  .lintstagedrc.js  .prettierignore  .stylintrc  prettier.config.js
.github/workflows/: confluence.yml  github_actions_security.yml  lint.yml  release.yml  sonarqube.yml
.opencode/commands/: opsx-apply.md  opsx-archive.md  opsx-explore.md  opsx-propose.md
.opencode/config/: agent-metadata.json
common/: colors.sh  common.sh  messages.sh
conf/: aliases  bash_profile  bashrc  exports  functions  gitconfig  profile  vimrc.local  zpreztorc
conf/.hammerspoon/: application_window_states.lua  extensions.lua  fntools.lua  init.lua  questionable_utils.lua  tools.lua  widget.lua  window_tracker.lua  windows.lua
conf/app/: gitconfig  gitignore  tmux.conf  tmux.conf.solarized-light  transfer.sh  wakatime.cfg  zazurc.json
conf/shell/: aliases  bash_prompt  bashrc  exports  functions  ideavimrc  inputrc  load  netrc  profile  zshenv  zshrc  zshrc.local
config/: packages.sh
config/hammerspoon/: custom.lua
config/zed/: keymap.json  settings.json
docker-compose/: prod.yml  stage.yml  test.yml
docker/app/: Dockerfile
docker/app-test/: Dockerfile
docker/docs/: Dockerfile
docs/: authors.md  code_of_conduct.md  commands.md  components.md  contributing.md  disclaimer.md  env-vars.md  functions.md  index.md  releasing.md  support.md  testing.md  troubleshooting.md  usage.md
docs/contribute/: git-flow.md  github-flow.md
docs/examples/: common.md
docs/guides/: create-module.md
docs/source/: AUTHORS.rst  CONTRIBUTING.rst  RELEASING.rst  SUPPORT.rst  TESTING.rst  TROUBLESHOOTING.rst
etc/tmuxinator/: dotfiles.yml
extras/make/: docs.mk  tests.mk
extras/script/: bootstrap.sh  config.sh  functions.sh  messages.sh  run.sh
nix/: devShell.nix  versions.nix
provision/: docker-compose.yml
provision/ansible/: ansible.cfg  deploy.yaml  inventory  playbook.yml  provision.yaml
provision/diagrams/: Taskfile.yml
provision/docker-compose/: dev.yml  prod.yml  stage.yml  test.yml
provision/generators/: README.yaml
provision/make/: alias.mk  docker.mk  docs.mk  git.mk  gitflow.mk  keybase.mk  python.mk  ruby.mk  tests.mk  utils.mk  vagrant.mk  yarn.mk
provision/script/: bootstrap.sh  config.sh  desktop.sh  functions.sh  messages.sh  repo.sh  run.sh  test.sh
provision/servers/: local.yaml
provision/shell/: composer.sh  main.sh  puppet.sh  ruby.sh
provision/task/: changelog.yml  confluence.yml  docker.yml  docs.yml  git.yml  gitflow.yml  go.yml  mark.yml  plantuml.yml  prettier.yml  python.yml  sonar.yml  ssh.yml  terraform.yml  version.yml  yarn.yml
provision/templates/: README.md.gotmpl  README.tpl.md
provision/vagrant/: os.rb
requirements/: dev.txt  docs.txt  setup.txt  test.txt
script/: bootstrap  bootstrap.sh  clean.sh  config.sh  deploy.sh  fix-git  fix-git.sh  functions.sh  grip.sh  gvm.sh  install  install.sh  linguist.sh  lintcode.sh  load.sh  messages.sh  provision.sh  pyenv.sh  roles_ansible.sh  run.sh  runserver.sh  setup  setup.sh  sync.sh  test  test.sh  validate  watch.sh
script/settings/: linux.sh  osx.sh
src/: config.sh  functions.sh  load.sh  messages.sh  repo.sh
src/settings/: linux.sh  osx.sh
tools/antibody/: bundles.txt  install.sh
tools/antidote/: install.sh
tools/antigen/: install.sh
tools/brew/: install.sh
tools/fonts/: install.sh
tools/git-extras/: install.sh
tools/gvm/: install.sh
tools/homebrew/: install.sh
tools/mac-cli/: install.sh
tools/nvm/: install.sh
tools/pyenv/: install.sh
tools/rust/: install.sh
tools/rvm/: install.sh
tools/scm_breeze/: install.sh
tools/tmux-themepack/: install.sh
tools/tpm/: install.sh
tools/wakatime/: install.sh
zsh/: completions.zsh  zsh_plugins.txt  zshenv  zshrc
zsh/core/: main.zsh
zsh/mod/: completions.zsh  config.zsh  go.zsh  main.zsh  ssh.zsh  vim.zsh  zsh.zsh
zsh/modules/: README.md
(+1775 files in other folders)
