[bumpversion]
files = VERSION README.rst
commit = False
tag = False
current_version = 1.3.1

[bumpversion:file:setup.cfg]
search = version='{current_version}'
replace = version='{new_version}'

[metadata]
description-file = README.rst

[flake8]
max-complexity = 6
statistics = True
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules
doctests = True
inline-quotes = single
accept-encodings = utf-8
per-file-ignores =
	tests/*.py: S101, Z432
	hooks/*.py: T001
	**/*.py: D100, D104, D106, D401, X100

[pycodestyle]
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[mypy]
python_version = 3.6
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[wheel]
universal = 1

[tool:pytest]
testpaths = tests/
console_output_style = classic
norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
addopts =
	--cov dotfiles
	--cov-report html
	--ignore docs/
	--ignore .eggs/
	--ignore .pytest_cache/
	--ignore .mypy_cache
	--ignore .egg
	-s -vv
	--doctest-modules

[isort]
multi_line_output = 3
include_trailing_comma = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = FIRSTPARTY
atomic = true
line_length = 99
