# All configuration for plugins and other utils is defined here.
# Read more about `setup.cfg`:
# https://docs.python.org/3/distutils/configfile.html

[bumpversion]
files = package.json
commit = False
tag = False
current_version = 1.7.1

[bumpversion:file:setup.cfg]
search = {current_version}
replace = {new_version}

[bumpversion:file:package.json]
search = {current_version}
replace = {new_version}

[metadata]
description-file = README.md

[flake8]
max-complexity = 6
statistics = True
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules
doctests = True
inline-quotes = single
accept-encodings = utf-8
per-file-ignores = 
	tests/*.py: S101, Z432
	hooks/*.py: T001
	**/*.py: D100, D104, D106, D401, X100

[pycodestyle]
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[mypy]
python_version = 3.8
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[isort]
line_length = 100
default_section = THIRDPARTY
atomic=true
known_standard_library=types
combine_as_imports = true
include_trailing_comma = true
known_first_party = ./
known_third_party = tests
not_skip = __init__.py
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[wheel]
universal = 1

[aliases]
test=pytest

[tool:pytest]
norecursedirs = "build" "docs" "docs[\/]_build" ".egg" "node_modules" "provision"
addopts = 
	-s -v
	--cov dotfiles
	--cov-report html
	--no-cov-on-fail
	--capture=no
	--ignore setup.py
	--ignore test_envs.py
	--ignore docs
	--ignore .egg
	--ignore .eggs
	--ignore .mypy_cache
	--ignore provision
	--ignore node_modules
	--doctest-modules
